--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NeoStore_Db;Integrated Security=True;TrustServerCertificate=True", // SQL Server for local
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
