Change DB to Postgres

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=NeoStore_Db;Integrated Security=True;TrustServerCertificate=True", // SQL Server for local
+    "DefaultConnection": "Host= localhost; Database = NeoStore_postgresDb; username= postgres"
   },
   "Logging": {
     "LogLevel": {
