--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host= localhost; Database = NeoStore_postgresDb; username= postgres"
+    "DefaultConnection": "Host= localhost; Database = NeoStore_postgresDb; username= postgres; Password=1111"
   },
   "Logging": {
     "LogLevel": {
